--- a/config.defaults.json
+++ b/config.defaults.json
@@ -13,7 +13,8 @@
 				"messages": 25
 			}
 		},
-		"themeOptions": []
+		"themeOptions": [],
+		"nonstop-index-api": "http://nsindex.com:4444/api"
 	},
 	"name": "nonstop-index-ui",
 	"environment": "dev",
